--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -6,7 +6,7 @@ page: json['home']
 <body>
 <main class="">
     <article class="">
-        <h1>test</h1>
+        <h1>トーアス株式会社テストサイト</h1>
     </article>
 </main>
 <% include common/_footer %>
