--- a/src/ejs/common/_footer.ejs
+++ b/src/ejs/common/_footer.ejs
@@ -1,3 +1,12 @@
-<footer>
+<footer class="l-footer">
     footer
 </footer>
+</div>
+<script src="./assets/js/jquery-3.3.1.min.js" type="text/javascript"></script>
+<script src="./assets/js/anime.min.js" type="text/javascript"></script>
+<script src="./assets/js/anime-custom.min.js" type="text/javascript"></script>
+<script src="./assets/js/barba.min.js" type="text/javascript"></script>
+<script src="./assets/js/barba-custom.min.js" type="text/javascript"></script>
+
+</body>
+</html>
