--- a/src/ejs/common/_header.ejs
+++ b/src/ejs/common/_header.ejs
@@ -1,3 +1,13 @@
-<header>
-    header
-</header>
+<body id="barba-wrapper" aria-live="polite">
+<div class="barba-container">
+    <header class="l-header">
+        <h1><img src="" alt="<%= json.default.title%>"></h1>
+        <ul class="c-nav">
+            <% data = json.home.menu;
+            data.forEach(function (value) { %>
+            <li>
+                <a href="<%= value.link %>"><%= value.title %></a>
+            </li>
+            <% }); %>
+        </ul>
+    </header>
