--- a/src/ejs/contact.ejs
+++ b/src/ejs/contact.ejs
@@ -4,9 +4,11 @@ page: json['contact']
 });
 %>
 <body>
+<% include common/_header %>
 <main class="">
     <article class="">
         <h1>contact</h1>
+        <a href="/">index</a>
     </article>
 </main>
 
