--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,14 +1,9 @@
 /*
 Bootstrap
  */
-//@import "foundation/bootstrap/bootstrap";
-//@import "foundation/bootstrap/bootstrap-grid";
-//@import "foundation/bootstrap/bootstrap-reboot";
-
-/*
-FontAwesome
- */
-//@import "foundation/fontawesome/font-awesome";
+@import "foundation/bootstrap/bootstrap";
+@import "foundation/bootstrap/bootstrap-grid";
+@import "foundation/bootstrap/bootstrap-reboot";
 
 /*
 Theme Sass file
@@ -24,8 +19,9 @@ Theme Sass file
 // layout
 @import "layout/header";
 @import "layout/footer";
+@import "layout/index";
 // project
-@import "object/project/front";
+@import "object/project/project";
 
 /*--------------------------------------------------------------
 >>> TABLE OF CONTENTS:
