--- a/src/ejs/common/_head.ejs
+++ b/src/ejs/common/_head.ejs
@@ -14,6 +14,7 @@ for ( var key in _default ) {
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="<%= page['description'] %>">
     <link rel="stylesheet" href="./assets/css/style.min.css">
+    <link href="https://fonts.googleapis.com/earlyaccess/mplus1p.css" rel="stylesheet" />
     <title>
         <%= page['title'] %>
         <% if(page !== json['home']){ %>
