--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -11,9 +11,10 @@ page: json['home']
                 <img class="js-index-hero-img" src="assets/img/index/index-top.jpg" alt="株式会社Toasu">
             </dt>
             <dd>
+                <span class="js-index-hero-h2-bg"></span>
                 <h2 class="js-index-hero-h2">未来を築く技術</h2>
                 <span class="js-index-hero-bar"></span>
-                <p class="js-index-hero-p"><%- json.home.top_desc %></p>
+                <p class="js-index-hero-p u-font-mplus1p"><%- json.home.top_desc %></p>
                 <span class="js-icon-scroll">
                     <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12.99 21.04"><defs><style>.cls-1{fill:#202387;}</style></defs><title>home-banner-icon-mouse</title><path class="cls-1" d="M6.66,0H6.33A6.34,6.34,0,0,0,0,6.33v8.38A6.34,6.34,0,0,0,6.33,21h.33A6.34,6.34,0,0,0,13,14.71V6.33A6.34,6.34,0,0,0,6.66,0ZM12,14.71A5.33,5.33,0,0,1,6.66,20H6.33A5.33,5.33,0,0,1,1,14.71V6.33A5.33,5.33,0,0,1,6.33,1h.33A5.33,5.33,0,0,1,12,6.33Z"/><circle class="cls-1" cx="6.49" cy="5.75" r="1.75"/></svg>
                 </span>
