--- a/src/sass/foundation/_variable.scss
+++ b/src/sass/foundation/_variable.scss
@@ -6,7 +6,8 @@
   font-family: Georgia, 游明朝, "Yu Mincho", YuMincho, "Hiragino Mincho ProN", HGS明朝E, メイリオ, Meiryo, serif;
 }
 
-$base-blue: #0C5E94;
+$base-blue: #0073A5;
+$shadow: rgba(2, 52, 74,.3);
 $white: #fff;
 
 @keyframes bounce {
