--- a/src/ejs/common/_header.ejs
+++ b/src/ejs/common/_header.ejs
@@ -1,13 +1,18 @@
 <body id="barba-wrapper" aria-live="polite">
 <div class="barba-container">
     <header class="l-header">
-        <h1><img src="" alt="<%= json.default.title%>"></h1>
-        <ul class="c-nav">
+        <h1 class="l-header-logo"><img src="assets/img/logo/logo.svg" alt="<%= json.default.title %>"></h1>
+        <ul class="l-header-nav">
             <% data = json.home.menu;
             data.forEach(function (value) { %>
-            <li>
-                <a href="<%= value.link %>"><%= value.title %></a>
+
+            <li class="c-nav-li">
+                <a class="u-font-mplus1p" href="/">
+                    <%= value.title %>
+                </a>
+                <span class="c-nav-bar"></span>
             </li>
+
             <% }); %>
         </ul>
     </header>
