--- a/src/sass/object/compornent/_nav.scss
+++ b/src/sass/object/compornent/_nav.scss
@@ -1,3 +1,51 @@
 /*
 c-nav
  */
+
+.c-nav {
+  &-li {
+    @extend .m-0;
+    position: relative;
+    padding: 0 1rem;
+    display: inline-block;
+    z-index: 1;
+
+    @include media-breakpoint-up(md) {
+      padding: 0 1.5rem;
+    }
+    @include media-breakpoint-up(lg) {
+      padding: 0 1.5rem;
+    }
+    @include media-breakpoint-up(xl) {
+      padding: 0 2rem;
+    }
+
+    a {
+      display: block;
+      width: 100%;
+      height: auto;
+    }
+
+    &:hover {
+      @include link_color($white) {
+        position: relative;
+        z-index: 10;
+      }
+      .c-nav-bar {
+        height: 79px;
+      }
+    }
+  }
+
+  &-bar {
+    position: absolute;
+    z-index: 1;
+    display: block;
+    width: 100%;
+    height: 0;
+    background: $base-blue;
+    bottom: -28px;
+    right: 0;
+    transition: all .5s ease-in-out;
+  }
+}
