--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,6 +16,8 @@ Theme Sass file
 @import "object/utility/utility";
 @import "object/compornent/nav";
 @import "object/compornent/sidebar";
+@import "object/compornent/hamburger";
+@import "object/compornent/loader";
 // layout
 @import "layout/header";
 @import "layout/footer";
