--- a/src/ejs/common/_footer.ejs
+++ b/src/ejs/common/_footer.ejs
@@ -7,6 +7,7 @@
 <script src="./assets/js/anime-custom.min.js" type="text/javascript"></script>
 <script src="./assets/js/barba.min.js" type="text/javascript"></script>
 <script src="./assets/js/barba-custom.min.js" type="text/javascript"></script>
+<script src="./assets/js/nav.min.js" type="text/javascript"></script>
 
 </body>
 </html>
