--- a/src/sass/foundation/_variable.scss
+++ b/src/sass/foundation/_variable.scss
@@ -7,14 +7,16 @@
 }
 
 $base-blue: #0073A5;
-$shadow: rgba(2, 52, 74,.3);
+$light-blue: #1F8bbA;
+$shadow: rgba(2, 52, 74, .3);
 $white: #fff;
+$nav-bg__bg: rgba(0, 0, 0, .7);
 
 @keyframes bounce {
-  0%{
+  0% {
     transform: translateY(0px);
   }
-  100%{
+  100% {
     transform: translateY(10px);
   }
 }
