--- a/src/sass/object/project/_project.scss
+++ b/src/sass/object/project/_project.scss
@@ -1,3 +1,12 @@
 /*
 p-front
  */
+
+.p-bg__bar {
+  margin-top: -100px;
+  height: 181px;
+}
+
+.p-service__white-border {
+  border-bottom: 1px solid $white;
+}
