--- a/src/sass/object/utility/_utility.scss
+++ b/src/sass/object/utility/_utility.scss
@@ -1,6 +1,29 @@
 /*
-uttility
+utility
  */
 .u-font-mplus1p {
   font-family: "Mplus 1p";
+}
+
+.u-max-width {
+  max-width: $max-width;
+}
+
+.u-font-gothic {
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", YuGothic, "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, "メイリオ", Meiryo, sans-serif !important;
+}
+
+.u-bg-blue {
+  background-color: $bg-blue;
+}
+.u-bg-gray{
+  background-color: $light-gray;
+}
+.u-bg-white{
+  background-color: $white;
+}
+
+.u-mp-0{
+  margin: 0;
+  padding: 0;
 }
