--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,12 +12,14 @@ Theme Sass file
 // foundation
 @import 'foundation/variable';
 @import "foundation/mixin";
+
 // object
 @import "object/utility/utility";
 @import "object/compornent/nav";
 @import "object/compornent/sidebar";
 @import "object/compornent/hamburger";
 @import "object/compornent/loader";
+@import "object/compornent/button";
 // layout
 @import "layout/header";
 @import "layout/footer";
