--- a/src/ejs/common/_head.ejs
+++ b/src/ejs/common/_head.ejs
@@ -13,7 +13,8 @@ for ( var key in _default ) {
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="<%= page['description'] %>">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.min.css">
+    <link href="https://fonts.googleapis.com/earlyaccess/mplus1p.css" rel="stylesheet" />
     <title>
         <%= page['title'] %>
         <% if(page !== json['home']){ %>
