--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -3,12 +3,13 @@ include('common/_head', {
 page: json['home']
 });
 %>
-<body>
-<main class="">
-    <article class="">
-        <h1>test</h1>
+<% include common/_header %>
+<main class="l-index">
+    <article class="l-index-wrap">
+        <section>
+
+        </section>
     </article>
 </main>
 <% include common/_footer %>
-</body>
-</html>
+</div>
