--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,14 +1,9 @@
 /*
 Bootstrap
  */
-//@import "foundation/bootstrap/bootstrap";
-//@import "foundation/bootstrap/bootstrap-grid";
-//@import "foundation/bootstrap/bootstrap-reboot";
-
-/*
-FontAwesome
- */
-//@import "foundation/fontawesome/font-awesome";
+@import "foundation/bootstrap/bootstrap";
+@import "foundation/bootstrap/bootstrap-grid";
+@import "foundation/bootstrap/bootstrap-reboot";
 
 /*
 Theme Sass file
@@ -17,15 +12,20 @@ Theme Sass file
 // foundation
 @import 'foundation/variable';
 @import "foundation/mixin";
+
 // object
 @import "object/utility/utility";
 @import "object/compornent/nav";
 @import "object/compornent/sidebar";
+@import "object/compornent/hamburger";
+@import "object/compornent/loader";
+@import "object/compornent/button";
 // layout
 @import "layout/header";
 @import "layout/footer";
+@import "layout/index";
 // project
-@import "object/project/front";
+@import "object/project/project";
 
 /*--------------------------------------------------------------
 >>> TABLE OF CONTENTS:
