ファイル修正

--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -7,7 +7,9 @@ page: json['home']
 <main class="l-index">
     <article class="l-index-wrap">
         <section>
-        </section>
+			<a href="/">index</a>
+			<a href="/contact.html">contact</a>
+		</section>
     </article>
 </main>
 <% include common/_footer %>
