--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -8,7 +8,7 @@ page: json['home']
     <article class="l-index-wrap">
         <section>
 			<a href="/">index</a>
-			<a href="/contact.html">contact</a>
+			<a href="/contact">contact</a>
 		</section>
     </article>
 </main>
