--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,12 +9,10 @@ Bootstrap
 @import "foundation/bootstrap/bootstrap";
 @import "foundation/bootstrap/bootstrap-grid";
 @import "foundation/bootstrap/bootstrap-reboot";
-
 /*
 _s style
  */
 @import "foundation/_s/underscores_normalize";
-
 /*
 hiraku
  */
@@ -41,3 +39,11 @@ Theme Sass file
 @import "layout/footer";
 // project
 @import "object/project/project";
+
+// safariのカラム落ち対策
+.row {
+	&::before,
+	&::after {
+		display: none;
+	}
+}
