--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -1,15 +1,15 @@
 <%-
 include('common/_head', {
-page: json['home']
+page: json['home'],
+path:'.'
 });
 %>
 <% include common/_header %>
 <main class="l-index">
-    <article class="l-index-wrap">
-        <section>
-			<a href="/">index</a>
-			<a href="/contact">contact</a>
+	<article class="l-index-wrap">
+		<section>
+			<h1>index</h1>
 		</section>
-    </article>
+	</article>
 </main>
 <% include common/_footer %>
