コンフリクトの解消

--- a/src/ejs/contact/index.ejs
+++ b/src/ejs/contact/index.ejs
@@ -8,8 +8,9 @@ path:'..'
 <% include ../common/_header %>
 <main class="">
 	<article class="">
-		<h1>contact</h1>
-		<a href="/">index</a>
+		<section>
+			contact
+		</section>
 	</article>
 </main>
 <% include ../common/_footer %>
