--- a/src/ejs/common/_head.ejs
+++ b/src/ejs/common/_head.ejs
@@ -14,8 +14,8 @@ for (var key in _default) {
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="description" content="<%= page['description'] %>">
 	<link rel="stylesheet" href="<%= path %>/assets/css/style.css">
-	<link rel="stylesheet" href="<%= path %>/assets/js/minified.js">
-	<link href="https://fonts.googleapis.com/earlyaccess/mplus1p.css" rel="stylesheet"/>
+	<script type="text/javascript" src="<%= path %>/assets/js/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="<%= path %>/assets/js/minified.min.js"></script>	<link href="https://fonts.googleapis.com/earlyaccess/mplus1p.css" rel="stylesheet"/>
 	<title><%= page['title'] %><% if(page !== json['home']){ %>-<%= json['default']['title'] %><% } %></title>
 </head>
 <body>
