--- a/src/sass/foundation/_variable.scss
+++ b/src/sass/foundation/_variable.scss
@@ -4,11 +4,14 @@
 
 // font-size
 
-$fs-base: 14px;
-$fs-md: 16px;
-$fs-lg: 23px;
-$fs-xl: 28px;
-$fs-xxl: 32px;
+$fs-base: 16px;
+$fs-xxs: 0.62em; //10px
+$fs-sm: 0.75em; //12px
+$fs-md: 0.87em; //14px
+$fs-lg: 1.5em; //24px
+$fs-xl: 1.68em; //27px
+$fs-xxl: 4.37em; //70px
+
 
 // base-color
 
