--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,9 +14,10 @@ _s style
  */
 @import "foundation/_s/underscores_normalize";
 /*
-hiraku
+drawer
  */
-@import "foundation/hiraku/hiraku";
+@import "foundation/drawer/drawer";
+
 /*
 slick
  */
