--- a/src/ejs/common/_head.ejs
+++ b/src/ejs/common/_head.ejs
@@ -16,16 +16,17 @@ for (var key in _default) {
 	<link rel="stylesheet" href="<%= path %>/assets/css/style.css">
 	<script type="text/javascript" src="<%= path %>/assets/js/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="<%= path %>/assets/js/minified.min.js"></script>
+    <link rel="icon" type="image/x-icon" href="https://human.sankei.co.jp/favicon.ico">
 	<title><%= page['title'] %><% if(page !== json['home']){ %>-<%= json['default']['title'] %><% } %></title>
-	<script>
+    <script>
 	(function(d) {
 		var config = {
-					kitId: 'ece8mow',
-					scriptTimeout: 3000,
-					async: true
-				},
-				h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+				kitId: 'pjz1shh',
+				scriptTimeout: 3000,
+				async: true
+			},
+			h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
 	})(document);
-	</script>
+    </script>
 </head>
 <body>
