--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,7 +1,12 @@
 /*
 l-header
  */
-.l-header{
-
+.l-header {
+	img {
+		max-width: 200px;
+		@include media-breakpoint-up(lg) {
+			max-width: 330px;
+		}
+	}
 }
 
