--- a/src/sass/foundation/_variable.scss
+++ b/src/sass/foundation/_variable.scss
@@ -12,12 +12,13 @@ $fs-lg: 1.5em; //24px
 $fs-xl: 1.68em; //27px
 $fs-xxl: 4.37em; //70px
 
+$fs-h3:1.125em;
 
 // base-color
 $navy:#4068D5;
 $blue:#264DB9;
 $gray:#F8F8F8;
-
+$dark-gray:#F2F2F2;
 
 //sns
 $fb-blue: #3B5998;
