--- a/src/ejs/common/_footer.ejs
+++ b/src/ejs/common/_footer.ejs
@@ -1,5 +1,12 @@
-<footer class="l-footer">
-	footer
+<footer class="l-footer py-5">
+    <p class="mb-0 text-center text-white">2012 - 2022 Sankei Human Learning Co.,Ltd.</p>
 </footer>
+
+<nav class="l-footer__fixed p-2 position-fixed">
+    <a href="<%= json['link'] %>">
+        <img class="d-lg-none" src="/assets/img/fix/fix__sp.png" alt="無料体験レッスン">
+        <span class="d-none d-lg-block l-footer__fixed-btn"></span>
+    </a>
+</nav>
 </body>
 </html>
