--- a/src/ejs/common/_head.ejs
+++ b/src/ejs/common/_head.ejs
@@ -28,5 +28,14 @@ for (var key in _default) {
 			h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
 	})(document);
     </script>
+<!--    &lt;!&ndash; Google Tag Manager &ndash;&gt;-->
+<!--    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':-->
+<!--			new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],-->
+<!--		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=-->
+<!--		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);-->
+<!--	})(window,document,'script','dataLayer','GTM-M86ZGZ4');</script>-->
+<!--    &lt;!&ndash; End Google Tag Manager &ndash;&gt;-->
 </head>
 <body>
+<!--<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M86ZGZ4" height="0" width="0"-->
+<!--                  style="display:none;visibility:hidden"></iframe></noscript>-->
