--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -2,6 +2,29 @@
 l-footer
  */
 
-.l-footer{
+.l-footer {
+	background-color: $navy;
 
+	&__fixed {
+		bottom: 0;
+		background-color: $black;
+		@include media-breakpoint-up(lg) {
+			background-color: transparent;
+			right: 1rem;
+			bottom: 1rem;
+		}
+
+		&-btn {
+			width: 150px;
+			height: 150px;
+			background: url("../img/fix/fix-btn__normal.png") center/contain no-repeat;
+			transition: $transition-base;
+
+			&:hover {
+				background: url("../img/fix/fix-btn__hover.png") center/contain no-repeat;
+				transition: $transition-base;
+
+			}
+		}
+	}
 }
